banking-application-src/src/main/java/org/darksavant/test/bank/error/InsufficientMoneyException.java
package org.darksavant.test.bank.error;

public class InsufficientMoneyException extends RuntimeException {
    public InsufficientMoneyException(String message) {
        super(message);
    }
}

